# UCC-Santiago-Vietto

./: README.md
2do/Programacion 3/C++ recursos/: ApuntesC++.docx  ContraseñaWinrar.txt  Ejercicios Propuestos y Resueltos en Cpp.rar
2do/Programacion 3/Practico/: ApuntePractico.docx  ClasesVideos.docx  Comandos GitHub.txt  Intalacion Clion.docx
2do/Programacion 3/Practico/Parciales/Parciales-Finales/Resolucion de todos/: Arbol1.cpp  Arbol2.cpp  Arbol3.cpp  Arbol4.cpp  CMakeLists.txt  Cola1.cpp  Cola2.cpp  Cola3.cpp  Cola4.cpp  ColaPrioridad.h  Ej1.cpp  Ej10.cpp  Ej11.cpp  Ej12.cpp  Ej13.cpp  Ej14.cpp  Ej15.cpp  Ej16.cpp  Ej17.cpp  Ej18.cpp  Ej19.cpp  Ej2.cpp  Ej20.cpp  Ej21.cpp  Ej22.cpp  Ej23.cpp  Ej24.cpp  Ej25.cpp  Ej3.cpp  Ej4.cpp  Ej5.cpp  Ej6.cpp  Ej7.cpp  Ej8.cpp  Ej9.cpp  Lista1.cpp  Lista2.cpp  Lista3.cpp  Lista4.cpp  Lista5.cpp  (+15 more)
2do/Programacion 3/Practico/Parciales/Parciales-Finales/Resolucion de todos/Estructuras/: ArbolBinario.h  Cola.h  Lista.h  NodoArbol.h  Pila.h  nodo.h
2do/Programacion 3/Teorico/: ApunteTeorico.docx  ClasesVideos.docx  ~$asesVideos.docx  ~WRL2287.tmp
3ro/Arquitectura de computadoras 1/: ClasesVideos.docx
3ro/Arquitectura de computadoras 1/Teorico/: Apunte.docx
3ro/Arquitectura de software 1/: Apunte.docx  ClasesVideos.docx  IMPORTANTE.txt  ~$puntes.docx  ~$unteAS1.docx  ~WRL0424.tmp
3ro/Arquitectura de software 2/: Apunte.docx  ClasesVideos.docx  Consigna Trabajo final.docx  Trabajo Final.docx
3ro/Arquitectura de software 2/Cosas/: post
3ro/Arquitectura de software 2/Trabajo final/: .project  Comandos.txt  Post en la terminal.txt  post.sh
3ro/Base de Datos 1/Teorico/: Apunte.docx  ClasesVideos.docx  ~$puntes.docx
3ro/Base de datos 2/Teorico/: ClasesVideos.docx  ~$puntes.docx  ~WRL0377.tmp  ~WRL1272.tmp
3ro/Gestion Ambiental/: ~$culo.docx
3ro/Gestion Ambiental/Teorico/: Apunte.docx
3ro/Ingenieria de Software 1/Practico/: Apunte.docx  ClasesVideos.docx  ~$asesVideos.docx
3ro/Ingenieria de Software 1/Teorico/: 2. Casos de estudio.pptx  Apunte.docx  ~$Apunte.docx  ~$asesVideos.docx  ~$unteBosio.docx  ~WRL0466.tmp  ~WRL3072.tmp
3ro/Lenguajes Formales-Automatas/Teorico/: Apunte.docx  ClasesVideos.docx  LFA_01.pptx  LFA_02.pptx  LFA_03.pptx  LFA_04.pptx  LFA_05.pptx  LFA_06.pptx  LFA_07.pptx  LFA_08.pptx  LFA_09.pptx  LFA_10.pptx
3ro/Sistemas de Informacion/Practico/: ERP - Colaborativo.docx  Ejercicios BPMN.docx
3ro/Sistemas de Informacion/Teorico/: Apunte.docx  BANCO DE PREGUNTAS ORALES DEL EXAMEN PARCIAL TEORICO.docx
3ro/Teologia/TP1/: Tarea virtual 18 de marzo- Comisión Miércoles Ingeniería.docx  Trabajo Práctico 1.pptx
3ro/Teologia/TP2/: Tarea virtual N° 2 - 1 de abril - Comisión Miércoles Ingeniería.docx  Trabajo Práctico 2.docx
3ro/Teologia/TP3/: Tarea virtual 8 de abril - Comisión Miércoles Ingeniería.docx  Trabajo Práctico Nº3.docx
4to/Computacion Grafica/Trabajo Practico 1/: Trabajo Practico 1.docx
4to/Computacion Grafica/Trabajo Practico 2/: Trabajo Practico 2.docx
4to/Economia/Practico/: Un 2 - Ejercicios - Costos (1).xlsx  Un 2 - Ejercicios - Teoria Produccion.xlsx  Un 2 - Ejercicios-AV.xlsx  Un 3 - Ejercicios Elasticidades.xlsx
4to/Economia/Teorico/: Temas.docx  ~$Apunte.docx
4to/Electiva 2/Teoria de Señales/: Ayuda final.docx  Presentacion Final.pptx  ~WRL1406.tmp
4to/Ingenieria de software 2/Teorico/: DriveProyecto.docx  Preguntas parcial.docx  ~$Apunte.docx  ~WRL2079.tmp
4to/Ingenieria de software 3/: Final Tips.txt
4to/Org y Admin de empresas/: Apunte.docx  Final escrito - 2022.docx
4to/Org y Admin de empresas/Filminas/: 2. FODA y PESTEL.pptx
4to/Org y Admin de empresas/Practico/: G3 Intervenga este tablero.docx  G3 U4 - Caso práctico KPI-Tablero de Comando.xlsx
4to/Pensamiento Social y Cristiano/: 1er parcial Ingeniería.docx  Francisco en Davos.docx  Parcial1.docx
4to/Redes 1/: ~$asesVideos.docx
4to/Redes 1/Practico/: ApuntePracticoRedes1.docx  TrabajoPractico1.doc  TrabajoPractico2.doc  TrabajoPractico3.doc  TrabajoPractico4.doc  TrabajoPractico5.doc  TrabajoPractico6.docx  TrabajoPractico7.doc  TrabajoPractico8.doc
4to/Redes 1/Teorico/: ClasesVideos.docx
4to/Redes 2/Teorico/: Apuntes.docx
4to/Seguridad y Auditoria Informatica/Auditoria/: ClasesVideos.docx  ~$Apunte.docx
4to/Seguridad y Auditoria Informatica/Seguridad/: ApunteSeguridad.docx  AtaqueAircrack.docx  cositas.txt
4to/Sistemas Operativos/Teorico/: Preguntas SO.docx  ~$unteProcesos.docx  ~WRL1704.tmp
5to/Administracion de proyectos/Teorico/: 2. Gestión de Proyectos.pptx  3. EDT - WBS.docx  3. Gestion del Cronograma.docx  4. Gestion de Riesgos.pptx  5. Estimaciones.ppt
5to/Calidad de software/Practico/: Trabajo practico 1.docx  (+1 more)
5to/Ingenieria Legal/: Guía de Clases - Ingeniería Legal.docx
5to/Ingles/: Apuntes.docx
(+702 files in other folders)
