cmake_minimum_required(VERSION 3.17)
project(Plantilla)

set(CMAKE_CXX_STANDARD 14)

add_executable(Ej1 Ej1.cpp Estructuras/ArbolBinario.h Estructuras/NodoArbol.h)
add_executable(Ej2 Ej2.cpp Estructuras/ArbolBinario.h Estructuras/NodoArbol.h)
add_executable(Ej3 Ej3.cpp Estructuras/ArbolBinario.h Estructuras/NodoArbol.h)
add_executable(Ej4 Ej4.cpp Estructuras/ArbolBinario.h Estructuras/NodoArbol.h)
add_executable(Ej5 Ej5.cpp Estructuras/ArbolBinario.h Estructuras/NodoArbol.h)
add_executable(Ej6 Ej6.cpp Estructuras/ArbolBinario.h Estructuras/NodoArbol.h)
add_executable(Ej7 Ej7.cpp Estructuras/ArbolBinario.h Estructuras/NodoArbol.h)
add_executable(Ej8 Ej8.cpp Estructuras/ArbolBinario.h Estructuras/NodoArbol.h)
add_executable(Ej9 Ej9.cpp Estructuras/ArbolBinario.h Estructuras/NodoArbol.h)
add_executable(Ej10 Ej10.cpp Estructuras/ArbolBinario.h Estructuras/NodoArbol.h)
add_executable(Ej11 Ej11.cpp Estructuras/ArbolBinario.h Estructuras/NodoArbol.h)
add_executable(Ej12 Ej12.cpp Estructuras/ArbolBinario.h Estructuras/NodoArbol.h)
add_executable(Ej13 Ej13.cpp Estructuras/ArbolBinario.h Estructuras/NodoArbol.h)
add_executable(Ej14 Ej14.cpp Estructuras/ArbolBinario.h Estructuras/NodoArbol.h)
add_executable(Ej15 Ej15.cpp Estructuras/ArbolBinario.h Estructuras/NodoArbol.h)
add_executable(Ej16 Ej16.cpp Estructuras/ArbolBinario.h Estructuras/NodoArbol.h)
add_executable(Ej17 Ej17.cpp Estructuras/ArbolBinario.h Estructuras/NodoArbol.h)
add_executable(Ej18 Ej18.cpp Estructuras/ArbolBinario.h Estructuras/NodoArbol.h)
add_executable(Ej19 Ej19.cpp Estructuras/ArbolBinario.h Estructuras/NodoArbol.h)
add_executable(Ej20 Ej20.cpp Estructuras/ArbolBinario.h Estructuras/NodoArbol.h)
add_executable(Ej21 Ej21.cpp Estructuras/ArbolBinario.h Estructuras/NodoArbol.h)
add_executable(Ej22 Ej22.cpp Estructuras/ArbolBinario.h Estructuras/NodoArbol.h)
add_executable(Ej23 Ej23.cpp Estructuras/ArbolBinario.h Estructuras/NodoArbol.h)
add_executable(Ej24 Ej24.cpp Estructuras/ArbolBinario.h Estructuras/NodoArbol.h)
add_executable(Ej25 Ej25.cpp Estructuras/ArbolBinario.h Estructuras/NodoArbol.h)


add_executable(Recursividad1 Recursividad1.cpp Estructuras/ArbolBinario.h Estructuras/NodoArbol.h)
add_executable(Recursividad2 Recursividad2.cpp Estructuras/ArbolBinario.h Estructuras/NodoArbol.h)
add_executable(Recursividad3 Recursividad3.cpp Estructuras/ArbolBinario.h Estructuras/NodoArbol.h)
add_executable(Recursividad4 Recursividad4.cpp Estructuras/ArbolBinario.h Estructuras/NodoArbol.h)
add_executable(Recursividad5 Recursividad5.cpp Estructuras/ArbolBinario.h Estructuras/NodoArbol.h)
add_executable(Recursividad6 Recursividad6.cpp Estructuras/ArbolBinario.h Estructuras/NodoArbol.h)
add_executable(Recursividad7 Recursividad7.cpp Estructuras/ArbolBinario.h Estructuras/NodoArbol.h)

add_executable(Lista1 Lista1.cpp Estructuras/ArbolBinario.h Estructuras/NodoArbol.h)
add_executable(Lista2 Lista2.cpp Estructuras/ArbolBinario.h Estructuras/NodoArbol.h)
add_executable(Lista3 Lista3.cpp Estructuras/ArbolBinario.h Estructuras/NodoArbol.h)
add_executable(Lista4 Lista4.cpp Estructuras/ArbolBinario.h Estructuras/NodoArbol.h)
add_executable(Lista5 Lista5.cpp Estructuras/ArbolBinario.h Estructuras/NodoArbol.h)
add_executable(Lista6 Lista6.cpp Estructuras/ArbolBinario.h Estructuras/NodoArbol.h)

add_executable(Pila1 Pila1.cpp Estructuras/ArbolBinario.h Estructuras/NodoArbol.h)
add_executable(Pila2 Pila2.cpp Estructuras/ArbolBinario.h Estructuras/NodoArbol.h)
add_executable(Pila3 Pila3.cpp Estructuras/ArbolBinario.h Estructuras/NodoArbol.h)
add_executable(Pila4 Pila4.cpp Estructuras/ArbolBinario.h Estructuras/NodoArbol.h)
add_executable(Pila5 Pila5.cpp Estructuras/ArbolBinario.h Estructuras/NodoArbol.h)
add_executable(Pila6 Pila6.cpp Estructuras/ArbolBinario.h Estructuras/NodoArbol.h)

add_executable(Cola1 Cola1.cpp Estructuras/ArbolBinario.h Estructuras/NodoArbol.h ColaPrioridad.h NodoPrioridad.h)
add_executable(Cola2 Cola2.cpp Estructuras/ArbolBinario.h Estructuras/NodoArbol.h ColaPrioridad.h NodoPrioridad.h)
add_executable(Cola3 Cola3.cpp Estructuras/ArbolBinario.h Estructuras/NodoArbol.h ColaPrioridad.h NodoPrioridad.h)
add_executable(Cola4 Cola4.cpp Estructuras/ArbolBinario.h Estructuras/NodoArbol.h ColaPrioridad.h NodoPrioridad.h)

add_executable(Arbol1 Arbol1.cpp Estructuras/ArbolBinario.h Estructuras/NodoArbol.h)
add_executable(Arbol2 Arbol2.cpp Estructuras/ArbolBinario.h Estructuras/NodoArbol.h)
add_executable(Arbol3 Arbol3.cpp Estructuras/ArbolBinario.h Estructuras/NodoArbol.h)
add_executable(Arbol4 Arbol4.cpp Estructuras/ArbolBinario.h Estructuras/NodoArbol.h)

